# mockmail

./: Cargo.toml  README.md
enums/: Cargo.toml
enums/src/: lib.rs
generics/: Cargo.toml
generics/src/: lib.rs
src/: email.rs  lib.rs  mock_client.rs  real_client.rs  send_email.rs
trait_objects/: Cargo.toml
trait_objects/src/: lib.rs
